--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ d3 Shooting Signatures in R as htmlwidget
 ## Installation
 
 ```{r eval = FALSE}
-devtools::install_github("/shotsignR")
+devtools::install_github("timelyportfolio/shotsignR")
 ```
 
 ## Usage
@@ -33,4 +33,4 @@ library(shotsignR)
 
 ## License
 
-MIT + file LICENSE © [Kenton Russell](https://github.com/).
+MIT + file LICENSE © [Kenton Russell](https://github.com/timelyportfolio).
