fix install and add attribution in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,18 +17,19 @@ knitr::opts_chunk$set(
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/shotsignR)](http://www.r-pkg.org/pkg/shotsignR)
 
 
-d3 Shooting Signatures in R as htmlwidget
+`d3.js` [Shooting Signatures](https://gist.github.com/pbeshai/ffd0f9d84b4e8df27db2) from [Peter Beshai](http://peterbeshai.com/) in R as htmlwidget
 
 ## Installation
 
 ```{r eval = FALSE}
-devtools::install_github("/shotsignR")
+devtools::install_github("timelyportfolio/shotsignR")
 ```
 
 ## Usage
 
 ```{r}
 library(shotsignR)
+? shotsign
 ```
 
 ## License
