add timelyportfolio to github links; thx @kferris10

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,4 +34,4 @@ library(shotsignR)
 
 ## License
 
-MIT + file LICENSE © [Kenton Russell](https://github.com/).
+MIT + file LICENSE © [Kenton Russell](https://github.com/timelyportfolio).
